# ImagesCapture

./: .gitignore  README.md  app.py  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml  requirements.txt
Database/: database.py  repository.py
Router/: controller.py
api_srvc/: dockerfile  main.py  pyproject.toml
api_srvc/Router/: controller.py
api_srvc/database/: database.py  repository.py
app/: SingletonInterface.py  __init__.py
app/Database/: database.py  query.py  repository.py  tables.sql
app/Router/: controller.py
database/: init.sql
images_capture_srvc/: app.py  dockerfile  requirements.txt
infra/database/: database.py  query.py  repository.py
infra/init/: init.sql
services/CaptureImages/: app.py
services/TelegramBot/: app.py
utils/: DependencyInjector.py  Singleton.py
