[tool.poetry]
name = "imagescapture"
version = "0.1.0"
description = "Sistema automatizado para download de imagens"
authors = ["Pedro <pedro_freires18@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
flask = "^3.1.0"
psycopg2-binary = "^2.9.10"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
